[Harsh Raj Singh] : added test cases to improve code coverage